Implementação na paginacao

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -5,8 +5,8 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Bem vindoa!</h1>
-        <p class="text-white mt-0 mb-5">Esta é a sua página de cadastro. Você pode realizar cadastro de pessoa.</p>
+        <h1 class="display-2 text-white">Bem vindo!</h1>
+        <p class="text-white mt-0 mb-5">Esta é a sua página de cadastro, aqui você gerência cadastramento de pessoa.</p>
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Nome</label>
-                    <input type="text" formControlName="nome" class="form-control form-control-alternative" placeholder="Username" value="">
+                    <input type="text" formControlName="nome" class="form-control form-control-alternative">
                     <!-- <div *ngIf="obter.nome.invalid && (obter.nome.dirty || obter.nome.touched)">
                       <div class="form-control-label" style="color: red" *ngIf="obter.nome.errors.required">Perfil
                         Obrigatório
@@ -76,9 +76,9 @@
                 <div class="col-lg-4">
                   <div class="form-group" formGroupName="nacionalidade">
                     <label class="form-control-label" for="input-first-name">Nacionalidade</label>
-                    <select class="form-control form-control-alternative" formControlName="codigo">
+                    <select class="form-control form-control-alternative" formControlName="codigo" (ngModelChange)="habilitar($event)">
                       <option selected>Selecione a Nacionalidade</option>
-                      <option [value]="i" *ngFor="let p of nacionalidade; let i = index">{{ p.nome | titlecase }}</option>
+                      <option [value]="p.codigo" *ngFor="let p of nacionalidade; let i = index">{{ p.nome | titlecase }}</option>
                     </select>
                   </div>
                 </div>
@@ -87,7 +87,7 @@
                     <label class="form-control-label" for="input-first-name">Naturalidade</label>
                     <select class="form-control form-control-alternative" formControlName="codigo">
                       <option selected>Selecione a Naturalidade</option>
-                      <option [value]="i" *ngFor="let e of naturalidade; let i = index">{{ e.nome | titlecase }}</option>
+                      <option [value]="e.codigo" *ngFor="let e of naturalidade; let i = index">{{ e.nome | titlecase }}</option>
                     </select>
                   </div>
                 </div>
