--- a/src/app/pages/listagem/listagem.component.html
+++ b/src/app/pages/listagem/listagem.component.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
+          <div class="card card-stats mb-4 mb-xl-0" *ngIf="totalDeElementos">
             <div class="card-body">
               <div class="row">
                 <div class="col">
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
+          <div class="card card-stats mb-4 mb-xl-0" *ngIf="totalDeElementos">
             <div class="card-body">
               <div class="row">
                 <div class="col">
