--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,8 +26,7 @@
               <span class="btn-inner--icon"><img src="../assets/img/icons/common/github.svg"></span>
               <span class="btn-inner--text">Github</span>
             </a> -->
-            <!-- <a class="btn btn-neutral btn-icon" (click)="socialSignIn('google')"> -->
-            <a class="btn btn-neutral btn-icon">
+            <a class="btn btn-neutral btn-icon" (click)="socialSignIn('google')">
               <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
